--- a/Views/Components/Footer.ejs
+++ b/Views/Components/Footer.ejs
@@ -1,166 +1,123 @@
 <div id="footer-div">
     <footer class="bg-dark text-center text-light">
         <div class="container p-4">
-            <section class="mb-4">
-                <a class="btn btn-outline-primary btn-floating m-1 text-light" href="#" role="button">
-                    <i class="fa fa-facebook"></i>
-                </a>
+            <div class="row">
+                <div class="col-11">
+                    <section id="social-icons-section" class="mb-4">
+                        <a class="btn btn-outline-primary btn-floating m-1 text-light" href="#" role="button">
+                            <i class="fa fa-facebook"></i>
+                        </a>
         
-                <a class="btn btn-outline-primary btn-floating m-1 text-light" href="#" role="button">
-                    <i class="fa fa-twitter"></i>
-                </a>
+                        <a class="btn btn-outline-primary btn-floating m-1 text-light" href="#" role="button">
+                            <i class="fa fa-twitter"></i>
+                        </a>
         
-                <a class="btn btn-outline-primary btn-floating m-1 text-light" href="#" role="button">
-                    <i class="fa fa-google"></i>
-                </a>
+                        <a class="btn btn-outline-primary btn-floating m-1 text-light" href="#" role="button">
+                            <i class="fa fa-google"></i>
+                        </a>
         
-                <a class="btn btn-outline-primary btn-floating m-1 text-light" href="#" role="button">
-                    <i class="fa fa-instagram"></i>
-                </a>
+                        <a class="btn btn-outline-primary btn-floating m-1 text-light" href="#" role="button">
+                            <i class="fa fa-instagram"></i>
+                        </a>
         
-                <a class="btn btn-outline-primary btn-floating m-1 text-light" href="#" role="button">
-                    <i class="fa fa-github"></i>
-                </a>
-            </section>
-        
-            <section class="">
-                <form action="">
-                <!--Grid row-->
-                <div class="row d-flex justify-content-center">
-                    <!--Grid column-->
-                    <div class="col-auto">
-                    <p class="pt-2">
-                        <strong>Sign up for our newsletter</strong>
-                    </p>
-                    </div>
-                    <!--Grid column-->
-        
-                    <!--Grid column-->
-                    <div class="col-md-5 col-12">
-                    <!-- Email input -->
-                    <div class="form-outline form-white mb-4">
-                        <input type="email" id="form5Example21" class="form-control" />
-                        <label class="form-label" for="form5Example21">Email address</label>
-                    </div>
-                    </div>
-                    <!--Grid column-->
-        
-                    <!--Grid column-->
-                    <div class="col-auto">
-                    <!-- Submit button -->
-                    <button type="submit" class="btn btn-outline-light mb-4">
-                        Subscribe
-                    </button>
-                    </div>
-                    <!--Grid column-->
+                        <a class="btn btn-outline-primary btn-floating m-1 text-light" href="#" role="button">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </section>
                 </div>
-                <!--Grid row-->
-                </form>
-            </section>
+            </div>
             
-            <section class="mb-4">
-                <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-                repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
-                eum harum corrupti dicta, aliquam sequi voluptate quas.
-                </p>
-            </section>
-        
-            <section class="">
-                <!--Grid row-->
+            <section id="footer-body-section">
                 <div class="row">
-                <!--Grid column-->
-                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
-        
-                    <ul class="list-unstyled mb-0">
-                    <li>
-                        <a href="#!" class="text-white">Link 1</a>
-                    </li>
-                    <li>
-                        <a href="#!" class="text-white">Link 2</a>
-                    </li>
-                    <li>
-                        <a href="#!" class="text-white">Link 3</a>
-                    </li>
-                    <li>
-                        <a href="#!" class="text-white">Link 4</a>
-                    </li>
-                    </ul>
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0 text-left">
+                        <h5 class="text-uppercase text-primary">Customer Support</h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="/" class="text-light">
+                                    Home
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-light">
+                                    Blogs
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-light">
+                                    About Us
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0 text-left">
+                        <h5 class="text-uppercase text-primary">
+                            Our Policies
+                        </h5>
+
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="#" class="text-light">
+                                    Refund Policy
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-light">
+                                    Privacy Policy
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-light">
+                                    Terms & Conditions
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <form action="#" method="GET">
+                        <div class="col-12 mb-md-0 mt-md-5 mt-lg-0">
+                            <div class="row d-flex justify-right">
+                                <div class="col-auto">
+                                    <p class="pt-2">
+                                        <strong>Be The First To Know</strong>
+                                    </p>
+                                </div>
+                    
+                                <div class="col-md-6 col-12">
+                                    <div class="form-outline form-white mb-4">
+                                        <input type="email" id="subscriber-email-address" name="subscriber-email-address" 
+                                                class="form-control" placeholder="Email Address"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 mb-0 mt-lg-0">
+                            <div class="row">
+                                <div id="footer-subscribe-button" class="col-auto">
+                                    <button type="submit" class="btn btn-outline-primary btn-floating m-1 text-light">
+                                        Subscribe
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <!--Grid column-->
-        
-                <!--Grid column-->
-                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
-        
-                    <ul class="list-unstyled mb-0">
-                    <li>
-                        <a href="#!" class="text-white">Link 1</a>
-                    </li>
-                    <li>
-                        <a href="#!" class="text-white">Link 2</a>
-                    </li>
-                    <li>
-                        <a href="#!" class="text-white">Link 3</a>
-                    </li>
-                    <li>
-                        <a href="#!" class="text-white">Link 4</a>
-                    </li>
-                    </ul>
-                </div>
-                <!--Grid column-->
-        
-                <!--Grid column-->
-                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
-        
-                    <ul class="list-unstyled mb-0">
-                    <li>
-                        <a href="#!" class="text-white">Link 1</a>
-                    </li>
-                    <li>
-                        <a href="#!" class="text-white">Link 2</a>
-                    </li>
-                    <li>
-                        <a href="#!" class="text-white">Link 3</a>
-                    </li>
-                    <li>
-                        <a href="#!" class="text-white">Link 4</a>
-                    </li>
-                    </ul>
-                </div>
-                <!--Grid column-->
-        
-                <!--Grid column-->
-                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
-        
-                    <ul class="list-unstyled mb-0">
-                    <li>
-                        <a href="#!" class="text-white">Link 1</a>
-                    </li>
-                    <li>
-                        <a href="#!" class="text-white">Link 2</a>
-                    </li>
-                    <li>
-                        <a href="#!" class="text-white">Link 3</a>
-                    </li>
-                    <li>
-                        <a href="#!" class="text-white">Link 4</a>
-                    </li>
-                    </ul>
-                </div>
-                <!--Grid column-->
-                </div>
-                <!--Grid row-->
             </section>
         </div>
-        
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+
+        <section class="mb-4">
+            <p>
+                Sign up for our newsletter to receive updates on special offers, news and events.
+            </p>
+        </section>
+
+        <section id="footer-copyright-div" class="text-center p-3">
             &copy; 2022 Copyright:
-            <a class="text-white" href="/">Smart Attendance System</a>
-        </div>
-        <!-- Copyright -->
+            <a class="text-light" href="/">
+                Smart Attendance System
+            </a>
+        </section>
     </footer>
 </div>
