--- a/Public/layout/css/style.css
+++ b/Public/layout/css/style.css
@@ -1,6 +1,4 @@
-span.asterisk 
+#footer-copyright-div 
 {
-    color: red;
-    margin-left: 3px;
-    font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.2);
 }
