--- a/Views/SignUpPage.ejs
+++ b/Views/SignUpPage.ejs
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/layout/css/style.css">
@@ -46,11 +47,14 @@
                             <div class="row">
                                 <div class="col-md-12 mb-4">                
                                     <div class="form-check">
-                                        <label class="form-label font-weight-bold" for="RegistrationType">
+                                        <label class="form-label font-weight-bold" for="registration-type">
                                             I want to Register Myself as:
                                         </label>
-                                        <span class="asterisk">*</span>
+                                        <span id="registration-type-span" class="asterisk ml-1 font-weight-bold text-danger">
+                                            *
+                                        </span>
                                     </div>
+
                                     <div class="form-check ml-3">
                                         <input type="radio" class="form-check-input" name="registration-type" id="registration-type-company" 
                                                 value="Company">
@@ -58,6 +62,7 @@
                                             Company
                                         </label>
                                     </div>
+
                                     <div class="form-check ml-3">
                                         <input type="radio" class="form-check-input" name="registration-type" id="registration-type-employee" 
                                                 value="Employee">
@@ -65,6 +70,7 @@
                                             Employee (Teacher, Staff etc.)
                                         </label>
                                     </div>
+
                                     <div class="form-check ml-3">
                                         <input type="radio" class="form-check-input" name="registration-type" id="registration-type-student" 
                                                 value="Student">
@@ -72,6 +78,77 @@
                                             Student
                                         </label>
                                     </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div id="company-form-div">
+                                    <div class="col-12 mb-4 form-group pmd-textfield pmd-textfield-outline">
+                                        <label class="form-label font-weight-bold" for="company-name">
+                                            Company Name:
+                                        </label>
+                                        <span id="company-name-span" class="asterisk ml-1 font-weight-bold text-danger">
+                                            *
+                                        </span>
+                                        <input type="text" id="company-name" name="company-name" class="form-control" 
+                                                placeholder=" Company Name">
+                                    </div>
+
+                                    <div class="col-12">
+                                        <div class="col-md-6 col-sm-10 mb-4 form-group pmd-textfield pmd-textfield-outline float-left">
+                                            <label class="form-label font-weight-bold" for="industry-name">
+                                                Industry:
+                                            </label>
+                                            <span id="industry-name-span" class="asterisk ml-1 font-weight-bold text-danger">
+                                                *
+                                            </span>
+                                            <select id="industry-name" name="industry-name" class="form-control select2 ml-1">
+                                                <option value="">Select Industry</option>
+                                            </select>
+                                        </div>
+    
+                                        <div class="col-md-6 col-sm-10 mb-4 form-group pmd-textfield pmd-textfield-outline float-left">
+                                            <label class="form-label font-weight-bold" for="number-of-employees">
+                                                No. of Emplyees:
+                                            </label>
+                                            <span id="number-of-employees-span" class="asterisk ml-1 font-weight-bold text-danger">
+                                                *
+                                            </span>
+                                            <select id="number-of-employees" name="number-of-employees" class="custom-select select2">
+                                                <option value="">No. of Employees</option>
+                                            </select>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-12 mb-4 form-group pmd-textfield pmd-textfield-outline">
+                                        <label class="form-label font-weight-bold" for="email-address">
+                                            Email Address:
+                                        </label>
+                                        <span id="email-address-span" class="asterisk ml-1 font-weight-bold text-danger">
+                                            *
+                                        </span>
+                                        <input type="text" id="email-address" name="email-address" class="form-control" 
+                                                placeholder=" email-address@xyz.com">
+                                    </div>
+
+                                    <div class="col-12 mb-4 form-group pmd-textfield pmd-textfield-outline">
+                                        <label class="form-label font-weight-bold" for="password">
+                                            Password:
+                                        </label>
+                                        <span id="password-span" class="asterisk ml-1 font-weight-bold text-danger">
+                                            *
+                                        </span>
+                                        <input type="Password" id="password" name="password" class="form-control" 
+                                                placeholder=" Password">
+                                    </div>
+                                </div>
+
+                                <div id="employee-form-div">
+
+                                </div>
+
+                                <div id="student-form-div">
+
                                 </div>
                             </div>
             
@@ -94,6 +171,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="/layout/javascript/main.js"></script>
   </body>
 </html>
