--- a/Views/HomePage.ejs
+++ b/Views/HomePage.ejs
@@ -28,10 +28,39 @@
     
     <!-- Current Page Body -->
     <div id="page-body-div">
+        <div class="fluid-container">
+            
+        </div>
+
         <div class="container">
-            <div class="row mt-3">
+            <div id="signin-form" class="row mt-3 justify-content-end">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <form action="" class="text-dark">
+                        <!-- Embed UsernamePassword Component -->
+                        <div class="row">
+                            <%
+                            var TagNamePrefixData = "";
+                            %>
+                            <%- include("./Components/UsernamePassword", {TagNamePrefixData: TagNamePrefixData}); %>
+                        </div>
+
+                        <div class="text-left float-left">
+                            Don't Have an Account? 
+                            <a href="/signup">
+                                Sign Up
+                            </a>
+                        </div>
+        
+                        <div class="text-right">
+                            <input class="btn btn-primary btn-outline-light btn-sm font-weight-bold" type="submit" value="SIGN IN" />
+                        </div>
+                    </form>
+                </div>
+            </div>
+            
+            <div id="site-signature" class="row mt-3">
                 <div class="jumbotron bg-dark">
-                    <h1 class="display-9 text-primary">
+                    <h1 id="site-signature-heading" class="display-9 text-primary">
                         Your Attendance Matters!
                     </h1>
                     <p class="lead text-light">
@@ -41,7 +70,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div id="site-targets" class="row">
                 <div class="col-md-4 text-center">
                     <img src="/images/OurVision.jpg" alt="Image Not Found" class="bd-placeholder-img rounded-circle" width="140em" height="140em">
                     <h2>
@@ -72,6 +101,58 @@
                         SAS has Gained the Trust from all over the World with over 200+ Clients, 10+ Organziations, and 100+ Employees.
                     </p>
                 </div>
+            </div>
+
+            <div id="site-introduction" class="row mt-3">
+                <div class="col-12 mt-3">
+                    <div class="description-site-introduction col-lg-4 mt-2 float-lg-left">
+                        <img src="/images/OrganizedSystem.png" alt="Image Not Found" class="img-fluid col-12">
+                    </div>
+                    <div class="description-site-introduction col-lg-8 col-md-12 mt-md-4 float-lg-right">
+                        <div class="slide bg-dark" style="border-radius: 10px;">                    
+                            <div class="p-2">
+                                <div class="item pl-3">
+                                    <h4 class="font-weight-bold text-primary">
+                                        Keeping the Whole System Organzied, Uncomplicated, & Upto Mark!
+                                    </h4>
+                                    <p class="lead text-light font-sm">
+                                        <small>
+                                            Introducing the Top Rated Smart Attendance System that Empowers You to Do the Easy Management 
+                                            for the Attendance of Employees, Students, or Organziation
+                                        </small>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 mt-3">
+                    <div class="description-site-introduction col-lg-4 float-lg-right">
+                        <img src="/images/AccessAnywhere.jpg" alt="Image Not Found" class="img-fluid col-12">
+                    </div>
+                    <div class="description-site-introduction col-lg-8 col-md-12 mt-md-4 float-lg-left">
+                        <div class="slide bg-dark" style="border-radius: 10px;">                    
+                            <div class="p-2">
+                                <div class="item pl-3">
+                                    <h4 class="font-weight-bold text-primary">
+                                        Access From Anywhere, From Any Device!
+                                    </h4>
+                                    <p class="lead text-light font-sm">
+                                        <small>
+                                            It can be Accessed from Anywhere on Any Device, So You can Connect Your Business 
+                                            Branches, Manage Remotely & Forget Data Losses
+                                        </small>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div name="site-benefits" class="row">
+                
             </div>
         </div>
     </div>
